bug: fix layout shift when toggle dropdown menu

--- a/src/app/(frontend)/globals.css
+++ b/src/app/(frontend)/globals.css
@@ -60,10 +60,10 @@
   }
 }
 
-[data-scroll-locked][data-scroll-locked] {
+/* [data-scroll-locked][data-scroll-locked] {
   overflow: scroll !important;
   pointer-events: none !important;
-}
+} */
 
 
 @layer base {
